RESOLVED FIXED15534
WebScriptObject.h has some formatting and editorial mistakes
https://bugs.webkit.org/show_bug.cgi?id=15534
Summary WebScriptObject.h has some formatting and editorial mistakes
Darin Adler
Reported 2007-10-16 13:30:25 PDT
I have a patch to fix them.
Attachments
patch, I will write a brief ChangeLog when checking in (5.87 KB, patch)
2007-10-16 13:30 PDT, Darin Adler
aroben: review+
Darin Adler
Comment 1 2007-10-16 13:30:53 PDT
Created attachment 16687 [details] patch, I will write a brief ChangeLog when checking in
Adam Roben (:aroben)
Comment 2 2007-10-16 13:34:16 PDT
Comment on attachment 16687 [details] patch, I will write a brief ChangeLog when checking in @interface WebUndefined : NSObject <NSCoding, NSCopying> -{ -} I didn't know those braces were optional. r=me
Note You need to log in before you can comment on or make changes to this bug.