        Reviewed by Adam.

- fix http://bugs.webkit.org/show_bug.cgi?id=15534
          WebScriptObject.h has some formatting and editorial mistakes

        * bindings/objc/WebScriptObject.h: Fix wording and formatting.



Canonical link: https://commits.webkit.org/20649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@26691 268f45cc-cd09-0410-ab3c-d52691b4dbfc